--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>BTS MAP</title>
+  <title>MAP</title>
   <script>
     // SVG-only favicon: white "N" on hsl(219 100% 50%) background
     (function(){
