--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body>
   <!-- initial src is the base. script below will append the page query string if present -->
   <iframe id="ndbFrame"
-    src="https://script.google.com/macros/s/AKfycbw5azL3deabywbmmUagv5t3_uMXOMJ1fJhE5XThrD7wWKSgm700QOMT35GcHJCUlXw6Ww/exec"
-    allow="geolocation; microphone; camera; accelerometer; gyroscope; autoplay">
+    src="https://script.google.com/macros/s/AKfycbw5azL3deabywbmmUagv5t3_uMXOMJ1fJhE5XThrD7wWKSgm700QOMT35GcHJCUlXw6Ww/exec"    
+    allow="clipboard-write clipboard-read; geolocation; microphone; camera; accelerometer; gyroscope; autoplay">
   </iframe>
 
   <script>
