--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- initial src is the base. script below will append the page query string if present -->
   <iframe id="ndbFrame"
     src="https://script.google.com/macros/s/AKfycbzZ6j31l8gFD3omXQx4LdtZJifun3c38oEQpO6YGXmneAMZxRiRpI1HzuOpjmYvqc0CFQ/exec"    
-    allow="clipboard-write clipboard-read; geolocation; microphone; camera; accelerometer; gyroscope; autoplay">
+    allow="clipboard-write; clipboard-read; geolocation; microphone; camera; accelerometer; gyroscope; autoplay">
   </iframe>
 
   <script>
