--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 <body>
   <!-- initial src is the base. script below will append the page query string if present -->
   <iframe id="ndbFrame"
-    src="https://script.google.com/macros/s/AKfycbzPn0YAnTvkHgYDJrHJ7LoN8TTFqP1uiVTUc33ejld8S92-NDBoQsK6f_mASX0LGb0Trw/exec"
+    <!-- src="https://script.google.com/macros/s/AKfycbzPn0YAnTvkHgYDJrHJ7LoN8TTFqP1uiVTUc33ejld8S92-NDBoQsK6f_mASX0LGb0Trw/exec" -->
+    src='https://script.google.com/macros/s/AKfycbyIqFWy-UC0_KcqTG4egYwlWSPHUIkRUqvASQV3nf9_qhVg9f6Mj2YA5AH57LqjcIIr/exec'
     allow="clipboard-write; clipboard-read; geolocation; microphone; camera; accelerometer; gyroscope; autoplay">
   </iframe>
 
   <script>
     (function(){      
-      const base = 'https://script.google.com/macros/s/AKfycbzPn0YAnTvkHgYDJrHJ7LoN8TTFqP1uiVTUc33ejld8S92-NDBoQsK6f_mASX0LGb0Trw/exec';
+      const base = 'https://script.google.com/macros/s/AKfycbyIqFWy-UC0_KcqTG4egYwlWSPHUIkRUqvASQV3nf9_qhVg9f6Mj2YA5AH57LqjcIIr/exec';
       const pageQS = location.search || ''; // includes leading '?' when present
 
       // OPTION 1 (default): forward entire query string from parent to iframe
