--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     })();
   </script>
   <style>
-    html, body { margin: 0; height: 100%; }
+    html, body { margin: 0; height: 100%; background-color: #0f62ff;}
+
     iframe { border: none; width: 100%; height: 100%; touch-action: auto; -ms-touch-action: auto; pointer-events: auto; -webkit-overflow-scrolling: touch; }
   </style>
 </head>
@@ -40,7 +41,7 @@
 
   <script>
     (function(){      
-      const base = 'https://script.google.com/macros/s/AKfycbwVLPiX1sQhlTXdF9QpnVYgZoj0wqtTK-hg_dMya9A8g-hvwtcKvzW-_mgBwdopy6RNBg/exec';
+      const base = 'https://script.google.com/macros/s/AKfycbxa4V1r210OlrBQGcs5uIIqWf8EEg9oO3SIxF8u6dVECFTggub2NX7Of8hLQQ-xZE93VA/exec';
       // const pageQS = location.search || ''; // includes leading '?' when present      
       // let iframeSrc = base + (pageQS ? (base.includes('?') ? '&' + pageQS.slice(1) : pageQS) : '');
       // const frame = document.getElementById('ndbFrame');
