--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
   <script>
     (function(){
-      const base = 'https://script.google.com/macros/s/AKfycbwNWPDzXjvloqDYJ1AumWVIfDY6LgTSaKD6DrVmar9BcMowz7Znp3XlbvPQ-mD80dGCFA/exec';
+      // const base = 'https://script.google.com/macros/s/AKfycbwNWPDzXjvloqDYJ1AumWVIfDY6LgTSaKD6DrVmar9BcMowz7Znp3XlbvPQ-mD80dGCFA/exec';
+      const base = 'https://script.google.com/macros/s/AKfycbz4OXO0fan5idOgkKt-Xyi7diTD7S0XeAb63AyysjM6eQJUSnAuKf3tZ6UYpI5gLRyq/exec';
       const iframe = document.getElementById('ndbFrame');
       const params = new URLSearchParams(window.location.search);
     
